samples/_failures_safe/1761265207_6e8ea8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2046f102.c: In function ‘print_high_severity_entries’:
./samples/SAFE/__tmp_2046f102.c:134:12: error: missing terminating " character
  134 |     printf("\nHigh severity entries (sever
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2046f102.c:134:5: error: expected expression at end of input
  134 |     printf("\nHigh severity entries (sever
      |     ^~~~~~
./samples/SAFE/__tmp_2046f102.c:134:5: error: expected declaration or statement at end of input
